--- a/index2.html
+++ b/index2.html
@@ -110,7 +110,7 @@
             Support My Work
         </h3>
         <p class="text-gray-300 mb-6">
-            Your donation helps me keep the lights on and build more cool stuff for you to enjoy.
+            Hello, your donation helps me keep the lights on and build more cool stuff for you to enjoy.
         </p>
         <a href="https://www.paypal.com/donate/?hosted_button_id=SVT92UBYWW63L" target="_blank" class="w-full bg-primary-blue hover:bg-[#0158D0] text-white font-semibold py-3 px-6 rounded-lg transition-colors duration-300">
             Donate Now
