--- a/index2.html
+++ b/index2.html
@@ -107,7 +107,7 @@
             </svg>
         </button>
         <h3 class="text-3xl font-bold mb-4 bg-clip-text text-transparent bg-gradient-to-r from-primary-blue to-primary-pink">
-            Support My Work
+            Support My Development Work
         </h3>
         <p class="text-gray-300 mb-6">
             Hello, your donation helps me keep the lights on and build more cool stuff for you to enjoy.
